--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser-dynamic": "~11.1.1",
     "@angular/router": "~11.1.1",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.6.0",
     "bootstrap-icons": "^1.4.0",
+    "express": "^4.17.1",
     "jquery": "^3.5.1",
+    "mongoose": "^5.12.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
