--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "mongoose": "^5.12.3",
+    "nodemon": "^2.0.12",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
